fix color changes in compounds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ importFrom(reactable,reactableOutput)
 importFrom(reactable,renderReactable)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
+importFrom(scales,hue_pal)
 importFrom(shiny,NS)
 importFrom(shiny,br)
 importFrom(shiny,checkboxInput)
@@ -152,6 +153,7 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,replace_na)
+importFrom(tidyr,unnest)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,stack)
 importFrom(zoo,na.approx)
