Class for chemometrics computation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(load_ms)
 export(run_app)
 import(shiny)
+importFrom(R6,R6Class)
+importFrom(bs4Dash,actionButton)
 importFrom(bs4Dash,box)
 importFrom(bs4Dash,column)
 importFrom(bs4Dash,dashboardBody)
@@ -20,10 +22,14 @@ importFrom(bs4Dash,valueBoxOutput)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,any_of)
 importFrom(dplyr,between)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
+importFrom(dplyr,cur_column)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
 importFrom(dplyr,join_by)
 importFrom(dplyr,left_join)
@@ -62,6 +68,7 @@ importFrom(fs,path)
 importFrom(fs,path_home)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,as_labeller)
+importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
@@ -74,6 +81,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,stat_summary)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,unit)
@@ -95,9 +103,11 @@ importFrom(plotly,ggplotly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(prettyunits,pretty_num)
+importFrom(purrr,discard)
 importFrom(purrr,exec)
 importFrom(purrr,iwalk)
 importFrom(purrr,map_df)
+importFrom(purrr,map_vec)
 importFrom(quarto,quarto_render)
 importFrom(reactable,colDef)
 importFrom(reactable,getReactableState)
@@ -125,6 +135,7 @@ importFrom(shiny,reactive)
 importFrom(shiny,reactiveTimer)
 importFrom(shiny,reactiveVal)
 importFrom(shiny,reactiveValues)
+importFrom(shiny,reactiveValuesToList)
 importFrom(shiny,renderPlot)
 importFrom(shiny,renderText)
 importFrom(shiny,renderUI)
@@ -147,13 +158,18 @@ importFrom(shinyWidgets,pickerInput)
 importFrom(shinycssloaders,withSpinner)
 importFrom(stringr,str_c)
 importFrom(stringr,str_glue)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
+importFrom(stringr,str_to_title)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,unnest)
+importFrom(tidyselect,ends_with)
+importFrom(tidyselect,last_col)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,stack)
 importFrom(zoo,na.approx)
