fixing minor details

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,27 +12,34 @@ Encoding: UTF-8
 Imports: 
     shiny,
     bs4Dash,
-    tidyverse,
+    dplyr,
+    ggplot2,
+    magrittr,
+    purrr,
+    quarto,
+    readr,
+    scales,
+    shinycssloaders,
+    stringr,
+    tibble,
+    tidyr,
+    tidyselect,
+    lubridate,
     openxlsx,
     shinyFiles,
     plotly,
     reactable,
-    duckdb,
-    shinyjs,
     excelR,
     fresh,
     dygraphs,
     zoo,
     janitor,
-    lubridate,
     shinyWidgets,
     tools,
     fs,
     prettyunits,
     reactable.extras,
-    attempt,
-    DT,
-    glue,
+    R6,
     golem,
     htmltools
 RoxygenNote: 7.3.1
