--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,8 @@ importFrom(reactable,getReactableState)
 importFrom(reactable,reactable)
 importFrom(reactable,reactableOutput)
 importFrom(reactable,renderReactable)
+importFrom(reactable.extras,dropdown_extra)
+importFrom(reactable.extras,reactable_extras_dependency)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
 importFrom(scales,hue_pal)
