fixing details for windows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ importFrom(dplyr,contains)
 importFrom(dplyr,cur_column)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
-importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
 importFrom(dplyr,join_by)
 importFrom(dplyr,left_join)
@@ -48,7 +47,6 @@ importFrom(dplyr,slice_head)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
-importFrom(dygraphs,dyCSS)
 importFrom(dygraphs,dyLegend)
 importFrom(dygraphs,dyOptions)
 importFrom(dygraphs,dyRangeSelector)
@@ -89,6 +87,7 @@ importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
+importFrom(golem,get_golem_options)
 importFrom(golem,with_golem_options)
 importFrom(htmltools,span)
 importFrom(htmltools,tags)
